--- a/index.html
+++ b/index.html
@@ -9,7 +9,38 @@
 <body>
     <div class="urna">
         <div class="tela">
-            ...
+            <div class="d-1">
+                <div class="d-1-left">
+                    <div class="d-1-1">
+                        <span>SEU VOTO PARA</span>
+                    </div>
+                    <div class="d-1-2">
+                        <span>PREFEITO</span>
+                    </div>
+                    <div class="d-1-3">
+                        <div class="numero pisca"></div>
+                        <div class="numero"></div>
+                    </div>
+                    <div class="d-1-4">
+                        Nome: FULANO DA SILVA<br>
+                        Partido: PQC<br>
+                        Vice-Prefeito: BELTRANO OLIVEIRA
+                    </div>
+                </div>
+                <div class="d-1-right">
+                    <div class="d-1-image">
+                        <img src="/images/84.png" alt="">
+                    </div>
+                    <div class="d-1-image small">
+                        <img src="/images/84_2.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="d-2">
+                Aperte a Tecla:<br>
+                CONFIRMA para CONFIRMAR este voto<br>
+                CORRIGE para REINICIAR este voto
+            </div>
         </div>
         <div class="teclado">
         <div class="teclado--linha">
@@ -31,10 +62,12 @@
         </div>
         <div class="teclado--linha">
             <div class="teclado--botao botao--branco">BRANCO</div>
-            <div class="teclado--botao botao--corrige">CORRIGIR</div>
-            <div class="teclado--botao botao--confirma">CONFIRMAR</div>
+            <div class="teclado--botao botao--corrige">CORRIGE</div>
+            <div class="teclado--botao botao--confirma">CONFIRMA</div>
         </div>
         </div>
     </div>
+    <script src="./js/etapas.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
